--- a/src/scss/components/_media.scss
+++ b/src/scss/components/_media.scss
@@ -1336,6 +1336,7 @@
 
     // footer-768
     .list {
+        background-color: #fff;
         border-top: 3px solid #ECECEC;
         text-align-last: left;
 
