--- a/src/views/_includes/blocks/catalogLeader.pug
+++ b/src/views/_includes/blocks/catalogLeader.pug
@@ -15,6 +15,6 @@ section.leader.catalogLeader
       strong.leader__info-name Анна Иванова
       span.leader__info-job дизайнер КухниСити
     .leader__block
-      .leader__text Кухня — самое важное место в квартире. Здесь заряжаются для нового дня и проводят вечер в кругу семьи, встречают гостей и готовят вместе с детьми. Давайте вместе создадим дизайн кухни вашей мечты.
+      .leader__text Кухня — самое важное место в квартире. Здесь заряжаются для&nbsp;нового дня и проводят вечер в кругу семьи, встречают гостей и готовят вместе с детьми. Давайте вместе создадим дизайн кухни вашей мечты.
       .leader__button2.button.button--dark Бесплатный дизайн проект
     
