--- a/src/views/_includes/blocks/filter.pug
+++ b/src/views/_includes/blocks/filter.pug
@@ -83,7 +83,8 @@ section.filter
                 button.tabs__button.visible-768 2 метра
                 button.tabs__more.visible-768.hidden-1280 Еще
                 button.tabs__cancel.visible-768.hidden-1280 Сбросить
-                button.tabs__cancel2.tabs__cancel Сбросить Фильтры
+                button.tabs__cancel2.tabs__cancel 
+                    span Сбросить Фильтры
                 button.tabs__button 3 метра
                 button.tabs__button 4 метра
                 button.tabs__button 5 м
